fix navbar and filter overlapping

--- a/src/encoded/static/scss/encoded/modules/_charts.scss
+++ b/src/encoded/static/scss/encoded/modules/_charts.scss
@@ -1144,6 +1144,7 @@ $workflow-node-color-type-global-context: #ffb3b3;
         top: 40px;
         background-color: #ffffff;
         border-bottom: 1px solid #f4f4f4;
+        z-index: 200 !important;
     }
 
     .area-chart-inner-container {
